# Blob-detector

./: CMakeLists.txt  package.xml
src/: 4dots_detection.cpp  4dots_detection_clicking.cpp  dot_detection.cc  dot_detection.cpp  dot_detection_from_topic.cpp  feature_helpers.h  image_pub.cpp  laser_detect.cc  makeitworking.txt  makeitworking.txt~  marker_tracker.ini  marker_tracker.ini~  marker_tracker_ros.cpp  plane_tracker.cpp  plane_tracker.ini  plane_tracker.ini~
